testfx/errors/error_tests/err_05_ascii.fx
// Test 5: object missing colon
data := { name "Alice" }
